# goit-web-hw09

./: .gitignore  authors.json  main.py  pyproject.toml
db/: connect.py  main.py  seeds.py
hw09/hw09/: pipelines.py  settings.py
hw09/hw09/spiders/: authors.py  quotes.py
